--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_KEY }}
         script: |
-          sudo rm -rf /var/www/html/*
-          sudo cp -r /home/ec2-user/deploy/* /var/www/html/
-          sudo systemctl restart httpd
+          echo "success"
+          # sudo rm -rf /var/www/html/*
+          # sudo cp -r /home/ec2-user/deploy/* /var/www/html/
+          # sudo systemctl restart httpd
