--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,6 @@ jobs:
         key: ${{ secrets.EC2_KEY }}
         script: |
           echo "success"
-          # sudo rm -rf /var/www/html/*
-          # sudo cp -r /home/ec2-user/deploy/* /var/www/html/
-          # sudo systemctl restart httpd
+          sudo rm -rf /var/www/html/*
+          sudo cp -r /home/ec2-user/deploy/* /var/www/html/
+          sudo systemctl restart httpd
