--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,3 @@
-name: Deploy to EC2
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
   build-and-deploy:
     runs-on: [self-hosted, linux]
@@ -24,24 +17,29 @@ jobs:
     - name: Build React app
       run: npm run build
 
-    - name: Copy files to EC2 via SCP
+    - name: Archive build directory
+      run: tar -czf build.tar.gz build
+
+    - name: Copy tar.gz to EC2
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_KEY }}
-        source: "build/**"  
-        target: "/home/ec2-user/deploy"
+        source: "build.tar.gz"
+        target: "/home/ec2-user/"
 
-    - name: Deploy files to Apache directory via SSH
+    - name: Extract and deploy on EC2
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_KEY }}
         script: |
-          echo "success"
+          rm -rf /home/ec2-user/deploy
+          mkdir -p /home/ec2-user/deploy
+          tar -xzf /home/ec2-user/build.tar.gz -C /home/ec2-user/deploy
           sudo rm -rf /var/www/html/*
-          sudo cp -r /home/ec2-user/deploy/. /var/www/html/  
+          sudo cp -r /home/ec2-user/deploy/build/. /var/www/html/
           sudo chmod -R o+rx /var/www/html/static
           sudo systemctl restart httpd
